# protege-mvp

./: .gitignore  Makefile  README.md
backend/: README.md  alembic.ini  app.db  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py  kpi_router.py  phase1_router.py  phase3_router.py
backend/app/config/: llm_config.py
backend/app/core/: config.py  db.py
backend/app/llm/: base.py  factory.py  mock_client.py  openai_client.py
backend/app/models/: __init__.py  goal.py  session.py  user.py
backend/app/prompts/: prompt_loader.py  prompt_registry.py
backend/app/repositories/: goals_repo.py  goals_repository.py  session_repository.py
backend/app/safety/: safety_detector.py  safety_rules.py
backend/app/schemas/: kpi_edit_ratio_schema.py  phase1_chat_schema.py  phase1_goal_schema.py  phase1_schema.py  phase3_chat_schema.py  phase3_report_schema.py  phase3_schema.py
backend/app/services/: goals_service.py  llm_metadata_builder.py  phase1_chat_service.py  phase1_goal_service.py  phase1_service.py  phase3_chat_service.py  phase3_report_service.py  phase3_service.py
backend/migrations/: README  env.py
backend/scripts/: kpi_aggregate.py
backend/tests/: test_edit_metrics.py  test_emergency_turn.py  test_kpi_edit_ratio_api.py  test_kpi_metrics.py  test_llm_client.py  test_phase1_chat_api.py  test_phase1_goal_confirm_api.py  test_phase1_session_api.py  test_phase3_chat_api.py  test_phase3_report_api.py  test_phase3_report_save_api.py  test_phase3_session_api.py  test_prompt_hash.py  test_prompt_loader.py  test_safety_guardrails.py
(+69 files in other folders)
